# resource-compiler

./: .clang-format  CMakeLists.txt  LICENSE  README.md  compile_resources.cmake  resource_compiler.cc  resources_info.h  write_cpp_source.h  write_private_header.h  write_public_header.h
include/seyeon/: compiled_resources.h
sample_data/: resources.json
src/: resource_compiler.cc  resources_info.h  utils.h  write_cpp_source.h  write_private_header.h  write_public_header.h
tests/: CMakeLists.txt  save_compiled_resources.cc
